--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Welcome to AV Botz</title>
-  <meta http-equiv="refresh" content="3;url=http://194.164.149.79:2626/" />
+  <meta http-equiv="refresh" content="3;url=http://194.164.149.79:2626" />
   <style>
     body {
       background-color: #0a0a23;
